tests/sessions/python_exception.txtar
error: X()

Traceback (most recent call last):
   ak-runner
    value = fn(*args, **kw)
            ^^^^^^^^^^^^^^^
  File "main.py", line 4, in main
    raise X()
main.X
-- main.py:main --
class X(Exception): pass

def main(event):
    raise X()
